<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Dice_Madness</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="submit_button">Submit</string>
    
    <string name="roll">Roll</string>
    <string name="pattern">Pattern</string>
    <string name="help">Help</string>
    
    <string name="dice_char">d</string>
    <string name="plus_char">+</string>
    
    <string name="name">Name</string>
    <string name="contingent">Contingent Continue</string>
    <string name="all_bonus">Bonus on all rolls</string>

    <string name="add_dice">Add Dice</string>
    <string name="remove_dice">-</string>
    
    <string name="single_save">Save This Pattern</string>
    <string name="save_all">Save All Patterns</string>
    <string name="loader">Load Patterns</string>
</resources>
