<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="madness.dice.MainActivity$PlaceholderFragment"
	android:orientation="vertical"
    android:background="#FFFFFF" >

    <LinearLayout
        android:layout_width="match_parent"
	    android:layout_height="0dip"
        android:layout_weight="1"
		android:orientation="horizontal">
	    <Spinner
	    	android:id="@+id/roll_selector"
	        android:layout_width="0dip"
        	android:layout_weight="1"
		    android:layout_height="wrap_content"
		    />
	    <Button
		    android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:onClick="add_pattern"
	        android:text="@string/plus_char"/>
	</LinearLayout>
    
    <LinearLayout
        android:id="@+id/display_window"
        android:layout_width="match_parent"
	    android:layout_height="0dip"
        android:layout_weight="10"
		android:orientation="vertical"/>

    <LinearLayout 
        android:layout_width="match_parent"
	    android:layout_height="0dip"
        android:layout_weight="1"
		android:orientation="horizontal">
        <Button 
	        android:layout_width="0dip"
        	android:layout_weight="1"
	        android:layout_height="match_parent"
	        android:onClick="roll"
	        android:text="@string/roll"
    	/>
        <Button 
	        android:layout_width="0dip"
        	android:layout_weight="1"
	        android:layout_height="match_parent"
	        android:onClick="pattern"
	        android:text="@string/pattern"
    	/>
        <Button 
	        android:layout_width="0dip"
        	android:layout_weight="1"
	        android:layout_height="match_parent"
	        android:onClick="help"
	        android:text="@string/help"
    	/>
        
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
	    android:layout_height="0dip"
        android:layout_weight="1"
		android:orientation="horizontal">
        <EditText
	        android:id="@+id/input"
	        android:layout_width="0dip"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:ems="10"
	        android:hint="@string/hello_world" />
        <Button 
	        android:layout_width="wrap_content"
	        android:layout_height="match_parent"
	        android:onClick="submit"
	        android:text="@string/submit_button"
    	/>
    </LinearLayout>
    
</LinearLayout>
